Coverity analysis defect 117793: Parse warning

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.9.0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Security 2021-03-22
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Parse warning

      A parse warning may reduce maintainability of the code, or it may indicate a serious error. A parse warning from the Coverity parser may indicate a bug, or poor coding practice
      /src/mongo/db/modules/enterprise/src/audit/audit_manager.h:42: PW.USELESS_TYPE_QUALIFIER_ON_RETURN_TYPE 117793 type qualifier on return type is meaningless

            Assignee:
            Sara Golemon (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: