SERVER-55004 Remove unnecessary const qualifier from return type

GitOrigin-RevId: 411446f357ff4a904a005eda65b82cf4da3ca333